# neural-ledger

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
benchmarks/: harness.py  test_failure_memory.py
docs/examples/: failure-memory.md  shared-memory.md
docs/implementation/: 01-why-what-how.md  50-release-checklist.md  90-decision-log.md
docs/internal/: 00-source-truth-and-fidelity.md  02-scenarios-and-proof-strategy.md  10-feature-spec.md  20-technical-spec.md  30-build-phases.md  32-phase-3b-shared-memory.md  40-evaluation-and-proof-pack.md  50-release-checklist.md  90-decision-log.md
examples/: coding_agent_failure_memory.py  quickstart.py  shared_memory_two_agents.py
neural_ledger/: __init__.py  api.py  config.py  types.py
neural_ledger/internal/: compiler.py  models.py  policy.py  runtime.py
neural_ledger/learn/: confidence.py  decay.py  feedback.py
neural_ledger/retrieve/: keyword.py  paths.py  ranking.py  semantic.py
neural_ledger/store/: factory.py  in_memory.py  protocols.py  sqlite.py
neural_ledger/telemetry/: metrics.py
notebooks/: 01_failure_memory.ipynb  02_semantic_recall.ipynb
proof/datasets/: coding_agent_failure_memory.json
proof/scenarios/: coding_agent_failure_memory.yaml
tests/: test_feedback.py  test_internals.py  test_persistence.py  test_recall.py  test_remember.py  test_shared_memory.py  test_types.py
